[package]
name = "nosyman"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["myyrakle <sssang97@naver.com>"] 
description = "LISP" 
keywords = [] 
repository = "https://github.com/myyrakle/nosyman" 
readme = "README.md"
documentation = "https://docs.rs/nosyman/latest/nosyman" 
homepage = "https://github.com/myyrakle/nosyman/blob/master/README.md" 


[dependencies]
atty = { version = "0.2.14", optional = true }
structopt = { version = "0.3.18", optional = true }
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
crossterm = "0.27.0"
ratatui = "0.26.0"
chrono = "0.4.35"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde_json = "1.0.114"

[[bin]]
name = "nosyman"
path = "./src/main.rs"
required-features = ["nosyman"]

[features]
default = ["nosyman"]
nosyman = ["cli"]
cli = ["atty", "structopt"]
